Initial work to track base image link and plugin options